--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,14 @@ button:hover{
     background-color: red;
 }
 
-.image{  
+.character-image{  
     height: 150px;
     width: 150px;
     padding-bottom: 20px;
     padding-left: 20px;
+    
 }
 
+.character{
+    display: inline-block;
+}
