--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,19 +13,38 @@ button:hover{
 .character-image{  
     height: 150px;
     width: 150px;
-    padding-bottom: 20px;
-    padding-left: 20px;
+    padding: 30px;
     
 }
 
 .character{
     display: inline-block;
+    cursor: pointer;
+    background-color: white;
+    border: 4px solid green;  
 }
+
+
+#enemies-availabe .character{
+    border: 8px solid red;
+  }
+
+
 
 .character-name {
     text-align: center;
   }
   
-  .character-health {
+.character-health {
     text-align: center;
-  }
+}
+
+button{
+    
+    border-radius: 6px;
+}
+
+.gameMessage {
+    font: 50px;
+    color: greenyellow;
+}
